--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-synthflow/verilog/** linguist-detectable=false
+synthflow/verilog/* linguist-detectable=false
+synthflow/verilog/**/* linguist-detectable=false
